<resources>
    <string name="app_name">Smoking tracker</string>
    <string name="title_home">Home</string>
    <string name="title_graph">Graph</string>
    <string name="title_notifications">Settings</string>

    <!-- fragment_dashboard -->
    <string name="text_view_timer">00:00:00</string>
    <string name="text_day_1">day</string>
    <string name="text_day_2">days</string>
    <string name="text_view_message">Time passed after last cigarette</string>
    <string name="text_view_daily">Daily</string>
    <string name="text_view_daily_value">0</string>
    <string name="text_view_weekly">Weekly</string>
    <string name="text_view_weekly_value">0</string>
    <string name="text_view_monthly">Monthly</string>
    <string name="text_view_monthly_value">0</string>
    <string name="text_view_yearly">Yearly</string>
    <string name="image_button_previous_day_description">Previous day</string>
    <string name="text_view_current_date_text_dd_mm_yyyy">DD.MM.YYYY</string>
    <string name="image_button_next_day_description">Next day</string>
    <string name="image_button_new_entry_content_description">New Entry</string>
    <string name="text_view_new_entry">Tap to add cigarette</string>

    <!--fragment_dashboard_table -->
    <string name="text_view_full_date_text">DD.MM.YYYY HH:SS</string>
    <string name="image_button_is_lent">Is lent?</string>
    <string name="image_button_edit_description">Edit record</string>
    <string name="delete_record_description">Delete record</string>

    <!--fragment_dashboard_popup -->
    <string name="text_view_message_text">Are you sure to delete this record?</string>
    <string name="text_view_message_text_1">Date and time</string>
    <string name="text_view_given_cigarette">Was this cigarette lent?</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_close">Close</string>

    <!--fragment_graph_view -->
    <string name="str_monday">Mon</string>
    <string name="str_tuesday">Tue</string>
    <string name="str_wednesday">Wed</string>
    <string name="str_thursday">Thu</string>
    <string name="str_friday">Fri</string>
    <string name="str_saturday">Sat</string>
    <string name="str_sunday">Sun</string>

    <string name="str_january">Jan</string>
    <string name="str_february">Feb</string>
    <string name="str_march">Mar</string>
    <string name="str_april">Apr</string>
    <string name="str_may">May</string>
    <string name="str_june">Jun</string>
    <string name="str_july">Jul</string>
    <string name="str_august">Aug</string>
    <string name="str_september">Sep</string>
    <string name="str_october">Oct</string>
    <string name="str_november">Nov</string>
    <string name="str_december">Dec</string>

    <!--fragment_settings -->
    <string name="text_view_basic">Basic</string>
    <string name="text_view_language">Language</string>
    <string name="button_language_select">Select</string>
    <string name="text_view_graph">Graph</string>
    <string name="text_view_graph_color">Graph color</string>
    <string name="text_view_color">Color</string>
    <string name="button_color_select">Select</string>
    <string name="text_view_point_color">Point color</string>
    <string name="button_point_color_select">Select</string>
    <string name="text_view_line_color">Line color</string>
    <string name="button_line_color_select">Select</string>
    <string name="text_view_paint_style">Paint style</string>
    <string name="text_view_about">About</string>
    <string name="text_view_version">Version</string>
    <string name="button_save">Save</string>

    <!--fragment_settings_popup_colors -->
    <string name="color_blue">Blue</string>
    <string name="color_gray">Gray</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>

    <!--fragment_settings_popup_paint_style -->
    <string name="text_view_fill">Fill</string>
    <string name="text_view_stroke">Stroke</string>
    <string name="text_view_fill_and_stroke">Fill and stroke</string>

    <string-array name="language_array">
        <item>Slovenščina</item>
        <item>English</item>
        <item>Deutsch</item>
        <item>Français</item>
    </string-array>
</resources>