<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="eu.mister3551.smokingtracker.ui.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="eu.mister3551.smokingtracker.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="eu.mister3551.smokingtracker.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>