<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_basic"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_view_language"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <Button
                        android:id="@+id/button_select_language"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/button_language_select"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_graph"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_view_color"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <Button
                        android:id="@+id/button_select_color"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/button_color_select"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_view_point_color"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <Button
                        android:id="@+id/button_select_point_color"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/button_point_color_select"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_view_line_color"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <Button
                        android:id="@+id/button_select_line_color"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/button_line_color_select"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_view_paint_style"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                    <Button
                        android:id="@+id/button_select_paint_style"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="@string/button_line_color_select"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_about"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/text_view_version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_view_version"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:ellipsize="end"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>