<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/layout_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_timer"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_message"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_timeline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_daily"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_daily_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_daily_value"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_weekly"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_weekly_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_weekly_value"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_monthly"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/text_view_monthly_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_monthly_value"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_timeline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_linear_layout">

        <LinearLayout
            android:id="@+id/group_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/image_button_previous_day"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/image_button_previous_day_description"
                android:textSize="24sp"
                android:background="@color/white"
                android:src="@drawable/baseline_navigate_back_40" />

            <TextView
                android:id="@+id/text_view_current_date_text"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/text_view_current_date_text_dd_mm_yyyy"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/image_button_next_day"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:contentDescription="@string/image_button_next_day_description"
                android:src="@drawable/baseline_navigate_next_40"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_navigation"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/image_button_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/image_button_new_entry_content_description"
            android:background="@color/gray"
            android:src="@drawable/baseline_smoking_rooms_40" />

        <TextView
            android:id="@+id/new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_new_entry"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>