<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/text_view_settings_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/text_view_gray"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/color_gray"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"/>

            <CheckBox
                android:id="@+id/check_box_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/text_view_blue"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/color_blue"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"/>

            <CheckBox
                android:id="@+id/check_box_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/text_view_red"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/color_red"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>

            <CheckBox
                android:id="@+id/check_box_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:ellipsize="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/text_view_yellow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/color_yellow"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"/>

            <CheckBox
                android:id="@+id/check_box_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/button_confirm"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button_close"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/button_close"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>